--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="css/style.css" />
     <title>AOD</title>
   </head>
-  <body></body>
+  <body>
+    <div class="wrapper"></div>
+    <h1>lorem</h1>
+  </body>
 </html>
