--- a/index.html
+++ b/index.html
@@ -8,7 +8,18 @@
     <title>AOD</title>
   </head>
   <body>
-    <div class="wrapper"></div>
+    <div class="wrapper">
+      <main class="page">
+        <!--- @import "header.html" -->
+        <div class="main-screen">
+          <div class="main-screen__bg">
+            <img src="img/bg_main.jpg" alt="bike" />
+          </div>
+        </div>
+        <div class="content"></div>
+        <!--- @import "footer.html" -->
+      </main>
+    </div>
     <h1>lorem</h1>
   </body>
 </html>
