--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <main class="page">
         <!--- @import "header.html" -->
         <div class="main-screen">
-          <div class="main-screen__bg">
+          <div class="main-screen__bg ibg">
             <img src="img/bg_main.jpg" alt="bike" />
           </div>
         </div>
