--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/style.css" />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
     <title>AOD</title>
   </head>
   <body>
@@ -21,5 +22,6 @@
       </main>
     </div>
     <h1>lorem</h1>
+    <script src="src/js/script.js"></script>
   </body>
 </html>
