feat: css top menu

--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
       </div>
       <div class="menu__body">
         <ul class="menu__list">
-          <li><a href="" class="menu__link">about us</a></li>
-          <li><a href="" class="menu__link">work</a></li>
-          <li><a href="" class="menu__link">shop</a></li>
-          <li><a href="" class="menu__link">contact</a></li>
+          <li id="1"><a href="" class="menu__link">about us</a></li>
+          <li id="2"><a href="" class="menu__link">work</a></li>
+          <li id="3"><a href="" class="menu__link">shop</a></li>
+          <li id="4"><a href="" class="menu__link">contact</a></li>
         </ul>
       </div>
     </nav>
@@ -48,6 +48,7 @@
       </main>
     </div>
     <h1>lorem</h1>
+<script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <script src="src/js/script.js"></script>
   </body>
 </html>
