--- a/src/header.html
+++ b/src/header.html
@@ -8,10 +8,10 @@
       </div>
       <div class="menu__body">
         <ul class="menu__list">
-          <li><a href="" class="menu__link">about us</a></li>
-          <li><a href="" class="menu__link">work</a></li>
-          <li><a href="" class="menu__link">shop</a></li>
-          <li><a href="" class="menu__link">contact</a></li>
+          <li id="1"><a href="" class="menu__link">about us</a></li>
+          <li id="2"><a href="" class="menu__link">work</a></li>
+          <li id="3"><a href="" class="menu__link">shop</a></li>
+          <li id="4"><a href="" class="menu__link">contact</a></li>
         </ul>
       </div>
     </nav>
