--- a/src/header.html
+++ b/src/header.html
@@ -8,13 +8,13 @@
       </div>
       <div class="menu__body">
         <ul class="menu__list">
-          <li id="1"><a href="" class="menu__link">about us</a></li>
-          <li id="2"><a href="" class="menu__link">work</a></li>
-          <li id="3"><a href="" class="menu__link">shop</a></li>
-          <li id="4"><a href="" class="menu__link">contact</a></li>
+          <li><a href="" class="menu__link">about us</a></li>
+          <li><a href="" class="menu__link">work</a></li>
+          <li><a href="" class="menu__link">shop</a></li>
+          <li><a href="" class="menu__link">contact</a></li>
         </ul>
       </div>
     </nav>
-    <div class="header__logo"><img src="img/logo.png" alt="" /></div>
+    <div class="header__logo"><img src="img/logo.png" alt="logo" /></div>
   </div>
 </header>
