--- a/index.html
+++ b/index.html
@@ -37,11 +37,18 @@
           </div>
         </div>
         <div class="content">
-          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ea
-          laboriosam tempore mollitia illo at eos nobis ex cupiditate amet
-          architecto consequatur laborum enim, voluptates velit iste totam?
-          Soluta, nemo at!
+          <section class="generation">
+            <div class="cnotainer">
+              <div class="generation__block block"></div>
+              <div class="block__icon">
+                <img src="img/icons/title/01.png" alt="icon" />
+              </div>
+              <div class="block__title"></div>
+              <div class="block__text"></div>
+            </div>
+          </section>
         </div>
+
 <footer class="footer">
   <div class="container"><div class="footer__row"></div></div>
 </footer>
