--- a/index.html
+++ b/index.html
@@ -172,7 +172,51 @@
             </div>
           </section>
         </div>
-
+        <section class="slider">
+          <div class="container">
+            <div class="slider__body">
+              <div class="slider__item">
+                <div class="slider__icon">
+                  <img src="img/icons/tweeter.png" alt="tweeter icon" />
+                </div>
+                <h3 class="slider__title">
+                  AOD New York @aod / <span>35 min</span>
+                </h3>
+                <div class="slider__text">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed
+                  ut tellus ac nulla semper rhoncus. Nullam a odio porttitor,
+                  dictum turpis vitae, pretium ante amet.
+                </div>
+              </div>
+              <div class="slider__item">
+                <div class="slider__icon">
+                  <img src="img/icons/tweeter.png" alt="tweeter icon" />
+                </div>
+                <h3 class="slider__title">
+                  AOD New York @aod / <span>35 min</span>
+                </h3>
+                <div class="slider__text">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed
+                  ut tellus ac nulla semper rhoncus. Nullam a odio porttitor,
+                  dictum turpis vitae, pretium ante amet.
+                </div>
+              </div>
+              <div class="slider__item">
+                <div class="slider__icon">
+                  <img src="img/icons/tweeter.png" alt="tweeter icon" />
+                </div>
+                <h3 class="slider__title">
+                  AOD New York @aod / <span>35 min</span>
+                </h3>
+                <div class="slider__text">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed
+                  ut tellus ac nulla semper rhoncus. Nullam a odio porttitor,
+                  dictum turpis vitae, pretium ante amet.
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
 <footer class="footer">
   <div class="container"><div class="footer__row"></div></div>
 </footer>
