--- a/index.html
+++ b/index.html
@@ -222,8 +222,7 @@
 </footer>
       </main>
     </div>
-    <h1>lorem</h1>
 <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-    <script src="src/js/script.js"></script>
+<script type="module" src="src/js/main.js"></script>
   </body>
 </html>
