--- a/index.html
+++ b/index.html
@@ -223,6 +223,8 @@
       </main>
     </div>
 <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-<script type="module" src="src/js/main.js"></script>
+<script src="src/js/slick.min.js"></script>
+<script src="src/js/slider.js"></script>
+<script src="src/js/script.js"></script>
   </body>
 </html>
