--- a/src/js.html
+++ b/src/js.html
@@ -1,2 +1,4 @@
 <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-<script type="module" src="src/js/main.js"></script>
+<script src="src/js/slick.min.js"></script>
+<script src="src/js/slider.js"></script>
+<script src="src/js/script.js"></script>
