--- a/index.html
+++ b/index.html
@@ -322,6 +322,30 @@
             </div>
           </div>
         </div>
+        <div class="subscribe">
+          <div class="container">
+            <div class="subscribe__body">
+              <div class="subscribe__logo">
+                <img src="img/logo.png" alt="logo" />
+              </div>
+              <div class="subscribe__label">Stay on the saddle!</div>
+              <form action="#" class="subscribe__form">
+                <div class="subscribe__input">
+                  <input
+                    autocomplete="off"
+                    type="text"
+                    name=""
+                    data-value="enter your email..."
+                    class="input req email"
+                  />
+                </div>
+                <div class="subscribe__button">
+                  <button type="submit" class="subscribe__btn">GO</button>
+                </div>
+              </form>
+            </div>
+          </div>
+        </div>
 <footer class="footer">
   <div class="container"><div class="footer__row"></div></div>
 </footer>
