--- a/index.html
+++ b/index.html
@@ -354,6 +354,7 @@
 <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
 <script src="src/js/slick.min.js"></script>
 <script src="src/js/slider.js"></script>
+<script src="src/js/forms.js"></script>
 <script src="src/js/script.js"></script>
   </body>
 </html>
