--- a/index.html
+++ b/index.html
@@ -171,184 +171,228 @@
               </div>
             </div>
           </section>
-        </div>
-        <section class="slider">
-          <div class="container">
-            <div class="slider__body">
-              <div class="slider__item">
-                <div class="slider__icon">
-                  <img src="img/icons/tweeter.png" alt="tweeter icon" />
-                </div>
-                <h3 class="slider__title">
-                  AOD New York @aod / <span>35 min</span>
-                </h3>
-                <div class="slider__text">
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed
-                  ut tellus ac nulla semper rhoncus. Nullam a odio porttitor,
-                  dictum turpis vitae, pretium ante amet.
-                </div>
-              </div>
-              <div class="slider__item">
-                <div class="slider__icon">
-                  <img src="img/icons/tweeter.png" alt="tweeter icon" />
-                </div>
-                <h3 class="slider__title">
-                  AOD New York @aod / <span>35 min</span>
-                </h3>
-                <div class="slider__text">
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed
-                  ut tellus ac nulla semper rhoncus. Nullam a odio porttitor,
-                  dictum turpis vitae, pretium ante amet.
-                </div>
-              </div>
-              <div class="slider__item">
-                <div class="slider__icon">
-                  <img src="img/icons/tweeter.png" alt="tweeter icon" />
-                </div>
-                <h3 class="slider__title">
-                  AOD New York @aod / <span>35 min</span>
-                </h3>
-                <div class="slider__text">
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed
-                  ut tellus ac nulla semper rhoncus. Nullam a odio porttitor,
-                  dictum turpis vitae, pretium ante amet.
-                </div>
-              </div>
-            </div>
-          </div>
-        </section>
-        <div class="shop">
-          <div class="shop__body">
-            <div class="shop__column shop__column_b">
-              <div class="shop__block block-shop">
-                <div class="block-shop__row">
-                  <div class="block-shop__column">
-                    <a href="" class="block-shop__item block-shop__item_l item">
-                      <span class="item__logo">
-                        <img src="img/icons/bike.png" alt="" />
-                        <span>Shop now</span>
-                      </span>
-                      <span class="item__image ibg">
-                        <img src="img/shop/01.jpg" alt="" />
-                      </span>
-                    </a>
-                  </div>
-                  <div class="block-shop__column">
-                    <a href="" class="block-shop__item block-shop__item_l item">
-                      <span class="item__logo">
-                        <img src="img/icons/bike.png" alt="" />
-                        <span>Shop now</span>
-                      </span>
-                      <span class="item__image ibg">
-                        <img src="img/shop/02.jpg" alt="" />
-                      </span>
-                    </a>
-                  </div>
-                </div>
-                <a href="" class="block-shop__item item">
-                  <span class="item__logo">
-                    <img src="img/icons/bike.png" alt="" />
-                    <span>Shop now</span>
-                  </span>
-                  <span class="item__image ibg">
-                    <img src="img/shop/03.jpg" alt="" />
-                  </span>
-                </a>
-              </div>
-            </div>
-            <div class="shop__column">
-              <a href="" class="block-shop__item block-shop__item_b item">
-                <span class="item__logo">
-                  <img src="img/icons/bike.png" alt="" />
-                  <span>Shop now</span>
-                </span>
-                <span class="item__image ibg">
-                  <img src="img/shop/04.jpg" alt="" />
-                </span>
-              </a>
-            </div>
-            <div class="shop__column">
-              <a href="" class="block-shop__item block-shop__item_b item">
-                <span class="item__logo">
-                  <img src="img/icons/bike.png" alt="" />
-                  <span>Shop now</span>
-                </span>
-                <span class="item__image ibg">
-                  <img src="img/shop/06.jpg" alt="" />
-                </span>
-              </a>
-            </div>
-            <div class="shop__column shop__column_b">
-              <div class="shop__block block-shop">
-                <a href="" class="block-shop__item item">
-                  <span class="item__logo">
-                    <img src="img/icons/bike.png" alt="" />
-                    <span>Shop now</span>
-                  </span>
-                  <span class="item__image ibg">
-                    <img src="img/shop/07.jpg" alt="" />
-                  </span>
-                </a>
-                <div class="block-shop__row">
-                  <div class="block-shop__column">
-                    <a href="" class="block-shop__item block-shop__item_l item">
-                      <span class="item__logo">
-                        <img src="img/icons/bike.png" alt="" />
-                        <span>Shop now</span>
-                      </span>
-                      <span class="item__image ibg">
-                        <img src="img/shop/08.jpg" alt="" />
-                      </span>
-                    </a>
-                  </div>
-                  <div class="block-shop__column">
-                    <a href="" class="block-shop__item block-shop__item_l item">
-                      <span class="item__logo">
-                        <img src="img/icons/bike.png" alt="" />
-                        <span>Shop now</span>
-                      </span>
-                      <span class="item__image ibg">
-                        <img src="img/shop/09.jpg" alt="" />
-                      </span>
-                    </a>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="shop__footer">
+
+          <section class="slider">
             <div class="container">
-              <a href="" class="shop__btn">DISCOVER THE SHOP</a>
-            </div>
-          </div>
-        </div>
-        <div class="subscribe">
-          <div class="container">
-            <div class="subscribe__body">
-              <div class="subscribe__logo">
-                <img src="img/logo.png" alt="logo" />
+              <div class="slider__body">
+                <div class="slider__item">
+                  <div class="slider__icon">
+                    <img src="img/icons/tweeter.png" alt="tweeter icon" />
+                  </div>
+                  <h3 class="slider__title">
+                    AOD New York @aod / <span>35 min</span>
+                  </h3>
+                  <div class="slider__text">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed
+                    ut tellus ac nulla semper rhoncus. Nullam a odio porttitor,
+                    dictum turpis vitae, pretium ante amet.
+                  </div>
+                </div>
+                <div class="slider__item">
+                  <div class="slider__icon">
+                    <img src="img/icons/tweeter.png" alt="tweeter icon" />
+                  </div>
+                  <h3 class="slider__title">
+                    AOD New York @aod / <span>35 min</span>
+                  </h3>
+                  <div class="slider__text">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed
+                    ut tellus ac nulla semper rhoncus. Nullam a odio porttitor,
+                    dictum turpis vitae, pretium ante amet.
+                  </div>
+                </div>
+                <div class="slider__item">
+                  <div class="slider__icon">
+                    <img src="img/icons/tweeter.png" alt="tweeter icon" />
+                  </div>
+                  <h3 class="slider__title">
+                    AOD New York @aod / <span>35 min</span>
+                  </h3>
+                  <div class="slider__text">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed
+                    ut tellus ac nulla semper rhoncus. Nullam a odio porttitor,
+                    dictum turpis vitae, pretium ante amet.
+                  </div>
+                </div>
               </div>
-              <div class="subscribe__label">Stay on the saddle!</div>
-              <form action="#" class="subscribe__form">
-                <div class="subscribe__input">
-                  <input
-                    autocomplete="off"
-                    type="text"
-                    name=""
-                    data-value="enter your email..."
-                    class="input req email"
-                  />
+            </div>
+          </section>
+          <div class="shop">
+            <div class="shop__body">
+              <div class="shop__column shop__column_b">
+                <div class="shop__block block-shop">
+                  <div class="block-shop__row">
+                    <div class="block-shop__column">
+                      <a
+                        href=""
+                        class="block-shop__item block-shop__item_l item"
+                      >
+                        <span class="item__logo">
+                          <img src="img/icons/bike.png" alt="" />
+                          <span>Shop now</span>
+                        </span>
+                        <span class="item__image ibg">
+                          <img src="img/shop/01.jpg" alt="" />
+                        </span>
+                      </a>
+                    </div>
+                    <div class="block-shop__column">
+                      <a
+                        href=""
+                        class="block-shop__item block-shop__item_l item"
+                      >
+                        <span class="item__logo">
+                          <img src="img/icons/bike.png" alt="" />
+                          <span>Shop now</span>
+                        </span>
+                        <span class="item__image ibg">
+                          <img src="img/shop/02.jpg" alt="" />
+                        </span>
+                      </a>
+                    </div>
+                  </div>
+                  <a href="" class="block-shop__item item">
+                    <span class="item__logo">
+                      <img src="img/icons/bike.png" alt="" />
+                      <span>Shop now</span>
+                    </span>
+                    <span class="item__image ibg">
+                      <img src="img/shop/03.jpg" alt="" />
+                    </span>
+                  </a>
                 </div>
-                <div class="subscribe__button">
-                  <button type="submit" class="subscribe__btn">GO</button>
+              </div>
+              <div class="shop__column">
+                <a href="" class="block-shop__item block-shop__item_b item">
+                  <span class="item__logo">
+                    <img src="img/icons/bike.png" alt="" />
+                    <span>Shop now</span>
+                  </span>
+                  <span class="item__image ibg">
+                    <img src="img/shop/04.jpg" alt="" />
+                  </span>
+                </a>
+              </div>
+              <div class="shop__column">
+                <a href="" class="block-shop__item block-shop__item_b item">
+                  <span class="item__logo">
+                    <img src="img/icons/bike.png" alt="" />
+                    <span>Shop now</span>
+                  </span>
+                  <span class="item__image ibg">
+                    <img src="img/shop/06.jpg" alt="" />
+                  </span>
+                </a>
+              </div>
+              <div class="shop__column shop__column_b">
+                <div class="shop__block block-shop">
+                  <a href="" class="block-shop__item item">
+                    <span class="item__logo">
+                      <img src="img/icons/bike.png" alt="" />
+                      <span>Shop now</span>
+                    </span>
+                    <span class="item__image ibg">
+                      <img src="img/shop/07.jpg" alt="" />
+                    </span>
+                  </a>
+                  <div class="block-shop__row">
+                    <div class="block-shop__column">
+                      <a
+                        href=""
+                        class="block-shop__item block-shop__item_l item"
+                      >
+                        <span class="item__logo">
+                          <img src="img/icons/bike.png" alt="" />
+                          <span>Shop now</span>
+                        </span>
+                        <span class="item__image ibg">
+                          <img src="img/shop/08.jpg" alt="" />
+                        </span>
+                      </a>
+                    </div>
+                    <div class="block-shop__column">
+                      <a
+                        href=""
+                        class="block-shop__item block-shop__item_l item"
+                      >
+                        <span class="item__logo">
+                          <img src="img/icons/bike.png" alt="" />
+                          <span>Shop now</span>
+                        </span>
+                        <span class="item__image ibg">
+                          <img src="img/shop/09.jpg" alt="" />
+                        </span>
+                      </a>
+                    </div>
+                  </div>
                 </div>
-              </form>
+              </div>
+            </div>
+            <div class="shop__footer">
+              <div class="container">
+                <a href="" class="shop__btn">DISCOVER THE SHOP</a>
+              </div>
             </div>
           </div>
-        </div>
+          <div class="subscribe">
+            <div class="container">
+              <div class="subscribe__body">
+                <div class="subscribe__logo">
+                  <img src="img/logo.png" alt="logo" />
+                </div>
+                <div class="subscribe__label">Stay on the saddle!</div>
+                <form action="#" class="subscribe__form">
+                  <div class="subscribe__input">
+                    <input
+                      autocomplete="off"
+                      type="text"
+                      name=""
+                      data-value="enter your email..."
+                      class="input req email"
+                    />
+                  </div>
+                  <div class="subscribe__button">
+                    <button type="submit" class="subscribe__btn">GO</button>
+                  </div>
+                </form>
+              </div>
+            </div>
+          </div>
 <footer class="footer">
-  <div class="container"><div class="footer__row"></div></div>
+  <div class="container">
+    <div class="footer__row">
+      <div class="footer__column">
+        <div class="footer__address">
+          <p>AOD New York</p>
+          <p>2250 Lexington Avenue</p>
+          <p>New York, NY 10035 - info@domain.com</p>
+        </div>
+      </div>
+      <div class="footer__column">
+        <div class="footer__social social">
+          <a href="" class="social__link">
+            <img src="img/icons/social/01.png" alt="tweeter" />
+          </a>
+          <a href="" class="social__link">
+            <img src="img/icons/social/02.png" alt="facebook" />
+          </a>
+          <a href="" class="social__link">
+            <img src="img/icons/social/03.png" alt="pintrest" />
+          </a>
+        </div>
+      </div>
+      <div class="footer__column">
+        <a href="" class="footer__dev dev">
+          <span class="dev__text">Handcrafted by</span>
+          <span class="dev__icon">
+            <img src="img/icons/dev.png" alt="designe studio icon" />
+          </span>
+        </a>
+      </div>
+    </div>
+  </div>
 </footer>
+        </div>
       </main>
     </div>
 <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
